[tool.poetry]
name = "nitrain"
version = "0.2.0"
description = "Neuroimaging-native tools for deep learning"
authors = ["ncullen93 <nicholas.cullen@med.lu.se>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
nibabel = "^5.2.0"
pybids = "^0.16.4"
datalad = "^0.19.6"
antspyx = "^0.4.2"
boto3 = "^1.34.49"
pydot = "^2.0.0"
torch = "^2.2.1"
google-auth = "^2.28.2"
parse = "^1.20.1"
tensorflow = "2.12"
antspynet = "^0.2.3"
tensorflow-probability = "0.20"
ipython = "8.14"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.15.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
